--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
+SESSION_ID="INCONNU~XD~uAcwjTiB#m4mRZxMQjM_ogc_Nz-Qd6--YF2xN0VJGObMb-IN61PA"
 PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+OWNER_NUMBER=918101971165
+SUDO_NUMBER=918101971165
+OWNER_NAME=Tithin 
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
 AUTO_READ=false
 AUTO_RECORDING=false
 AUTO_REACT=false
-STATUS_READ_MSG=STATUS VIEWED BY INCONNU XD V2 ✅
+STATUS_READ_MSG=STATUS VIEWED BY Tithin XD V2 ✅
 ANTILINK=false
 ANTIBOT=true
 ANTIBOT_WARNINGS=3
